# nullion

./: .env.example  .gitignore  .watchmanconfig  AGENTS.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: pr-suite.yml
docs/: README.md  chat-latency-revert-notes.md  chat-latency-todo.md  deep-agents-improvement-checklist.md  e2e-testing.md  plugins.md  skill-packs.md  support.md
src/nullion/: __init__.py  agent_orchestrator.py  agent_turn_limits.py  approval_context.py  approval_decisions.py  approval_display.py  approval_markers.py  approvals.py  artifact_validation.py  artifact_workflow_graph.py  artifacts.py  assistant.py  attachment_format_graph.py  audit.py  auth.py  auto_skill_validation.py  builder.py  builder_background.py  builder_capabilities.py  builder_memory.py  builder_observer.py  builder_reflector.py  builder_routes.py  capability_dependencies.py  chat_attachments.py  chat_backend.py  chat_operator.py  chat_response_contract.py  chat_store.py  chat_streaming.py  chat_text.py  cli.py  codebase_summary.py  config.py  connections.py  connector_prompt_context.py  context_bus.py  conversation_analyzer.py  conversation_history_tools.py  conversation_runtime.py  (+115 more)
src/nullion/assets/: d3-force.bundle.min.js
src/nullion/plugins/browser_plugin/: __init__.py  browser_config.py  browser_policy.py  browser_session.py  browser_tools.py
src/nullion/plugins/browser_plugin/backends/: auto_backend.py  cdp_backend.py  playwright_backend.py
tests/: conftest.py  test_adapter_recovery_tray_coverage.py  test_agent_harness_adapters.py  test_agent_turn_graph.py  test_allow_once_permissions.py  test_approval_display_workflow.py  test_approval_workflow.py  test_artifact_workflow_graph.py  test_assistant_surface_workflow.py  test_attachment_format_graph.py  test_boundary_permission_revoke.py  test_browser_cleanup_workflow.py  test_browser_plugin_backend_coverage.py  test_builder_graph_workflow.py  test_chat_backend_workflow.py  test_chat_response_contract_workflow.py  test_chat_store_workflow.py  test_cli_auth_orchestrator_coverage.py  test_config_and_auth_workflow_expanded.py  test_context_bus_and_builder_memory.py  test_credential_store.py  test_cron_delivery_workflow.py  test_cron_management_workflow.py  test_decomposer_analyzer_pool_health.py  test_delegated_task_golden_suite.py  test_doctor_playbooks_workflow.py  test_file_attachment_artifact_workflow.py  test_formatters_missions_and_aggregation.py  test_gateway_notifications_workflow.py  test_high_coverage_operator_telegram_helpers.py  test_high_coverage_provider_model_helpers.py  test_install_auth.py  test_install_skill_pack_shell.py  test_install_windows.py  test_language_neutral_routing.py  test_messaging_adapters_workflow.py  test_package_integrity.py  test_permission_revoke_persistence.py  test_policy_tool_workflow.py  test_process_helpers_workflow.py  (+31 more)
tests/e2e/: test_install_to_web_smoke.py  test_web_surface_contracts.py
website/: _redirects  index.html  robots.txt  sitemap.xml  styles.css
website/docs/: index.html
